--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,13 @@ main{
     height: 100%;
     background-color: var(--pale-blue);
     padding: 1rem;
+    min-width: 365px;
 }
 
 /* Outer Container */
 .container{
-    max-width: 375px;
+    max-width: 350px;
+    min-width: 300px;
     margin: 1rem auto;
     background-color: white;
     border-radius: var(--radius);
@@ -107,7 +109,7 @@ main{
     margin-right: 2rem;
 }
 .price{
-    margin-right: 4rem;
+    margin-right: 3rem;
 }
 #plan-heading{
     color: var(--dark-blue);
@@ -141,6 +143,17 @@ main{
     font-weight: var(--font-700);
     font-size: var(--font-size);
     
+}
+
+/* DESKTOP DESIGN */
+@media(min-width: 700px){
+main{
+    background-image: url(./images/pattern-background-desktop.svg);
+}
+.container{
+    margin: auto;
+}
+
 }
 
 
