Finalized Designs and Updated README file

--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,12 @@ body{
 }
 
 main{
+    min-width: 365px;
     width: 100%;
     height: 100%;
     background-color: var(--pale-blue);
     padding: 1rem;
-    min-width: 365px;
+    
 }
 
 /* Outer Container */
@@ -144,6 +145,26 @@ main{
     font-size: var(--font-size);
     
 }
+/* ACTIVE STATES */
+.plan{
+    z-index: 1000;
+}
+.btn:hover{
+    cursor: pointer;
+    opacity: 0.7;
+}
+#change:hover{
+    text-decoration: none;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.cancel:hover{
+    cursor: pointer;
+    font-weight: var(--font-900);
+}
+
+
 
 /* DESKTOP DESIGN */
 @media(min-width: 700px){
