--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ main{
     margin-right: 3rem;
 }
 #plan-heading{
+    font-size: 20px;
     color: var(--dark-blue);
     font-weight: var(--font-900);
 }
